// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevTools - basic Error boundary should display an error boundary with message if stack is not present 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    :root{--mantine-font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe, sans-serif;--mantine-font-family-monospace: JetBrains Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;--mantine-font-family-headings: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;--mantine-radius-default: calc(0.5rem * var(--mantine-scale));--mantine-primary-color-filled: var(--mantine-color-dark-filled);--mantine-primary-color-filled-hover: var(--mantine-color-dark-filled-hover);--mantine-primary-color-light: var(--mantine-color-dark-light);--mantine-primary-color-light-hover: var(--mantine-color-dark-light-hover);--mantine-primary-color-light-color: var(--mantine-color-dark-light-color);--mantine-primary-color-0: var(--mantine-color-dark-0);--mantine-primary-color-1: var(--mantine-color-dark-1);--mantine-primary-color-2: var(--mantine-color-dark-2);--mantine-primary-color-3: var(--mantine-color-dark-3);--mantine-primary-color-4: var(--mantine-color-dark-4);--mantine-primary-color-5: var(--mantine-color-dark-5);--mantine-primary-color-6: var(--mantine-color-dark-6);--mantine-primary-color-7: var(--mantine-color-dark-7);--mantine-primary-color-8: var(--mantine-color-dark-8);--mantine-primary-color-9: var(--mantine-color-dark-9);--mantine-color-dark-0: #C1C2C5;--mantine-color-dark-1: #A6A7AB;--mantine-color-dark-2: #909296;--mantine-color-dark-3: #5c5f66;--mantine-color-dark-4: #373A40;--mantine-color-dark-5: #2C2E33;--mantine-color-dark-6: #25262b;--mantine-color-dark-7: #1A1B1E;--mantine-color-dark-8: #141517;--mantine-color-dark-9: #101113;}:root[data-mantine-color-scheme="dark"]{--mantine-color-anchor: var(--mantine-color-dark-4);--mantine-color-dark-light: rgba(37, 38, 43, 0.15);--mantine-color-dark-light-hover: rgba(37, 38, 43, 0.2);--mantine-color-dark-outline-hover: rgba(55, 58, 64, 0.05);}:root[data-mantine-color-scheme="light"]{--mantine-color-anchor: var(--mantine-color-dark-6);--mantine-color-dark-light: rgba(37, 38, 43, 0.1);--mantine-color-dark-light-hover: rgba(37, 38, 43, 0.12);--mantine-color-dark-outline-hover: rgba(37, 38, 43, 0.05);}
  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="undefined jotai-devtools-shell m-89d60db1 mantine-Tabs-root"
    data-orientation="horizontal"
    data-testid="jotai-devtools-shell"
    data-variant="default"
    id="jotai-devtools-shell"
    style="--tabs-radius: var(--mantine-radius-default); --tabs-color: var(--mantine-color-dark-filled); max-height: 90%;"
  >
    <div
      class=""
      data-testid="shell-resize-bar"
    />
    <div
      class=""
    >
      <div
        class="m-8bffd616 mantine-Flex-root __m__-rfr"
        style="align-items: center; justify-content: space-between;"
      >
        <div
          class="m-4081bf90 mantine-Group-root"
          style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
        >
          <h1
            class="m-8a5d1357 mantine-Title-root"
            data-order="1"
            data-size="h4"
            style="--title-fw: var(--mantine-h4-font-weight); --title-lh: var(--mantine-h4-line-height); --title-fz: var(--mantine-h4-font-size);"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="m-347db0ec mantine-Badge-root"
            data-size="xs"
            data-variant="light"
            style="--badge-height: var(--badge-height-xs); --badge-padding-x: var(--badge-padding-x-xs); --badge-fz: var(--badge-fz-xs); --badge-bg: var(--mantine-color-orange-light); --badge-color: var(--mantine-color-orange-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          >
            <span
              class="m-5add502a mantine-Badge-label"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="m-8bffd616 mantine-Flex-root __m__-rg5"
          style="align-items: center;"
        >
          <button
            class="mantine-focus-auto mantine-active m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="filled"
            style="--ai-bg: var(--mantine-color-gray-filled); --ai-hover: var(--mantine-color-gray-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
            title="Toggle color scheme"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                class="tabler-icon tabler-icon-sun"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"
                />
                <path
                  d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"
                />
              </svg>
            </span>
          </button>
          <button
            class="mantine-focus-auto mantine-active m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="subtle"
            style="--ai-radius: var(--mantine-radius-md); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
            title="Minimize panel"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                class="tabler-icon tabler-icon-minus"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12l14 0"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="m-8bffd616 mantine-Flex-root __m__-rm3"
      data-testid="jotai-devtools-error-boundary"
      role="alert"
      style="align-items: center; justify-content: center; height: 90%;"
    >
      <div
        class=""
        style="width: 100%; max-width: 80%; max-height: 80%;"
      >
        <div
          class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          data-size="md"
          style="--text-fz: var(--mantine-font-size-md); --text-lh: var(--mantine-line-height-md); font-weight: 500;"
        >
          <span
            class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          >
            <svg
              class="tabler-icon tabler-icon-alert-circle"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
              />
              <path
                d="M12 8v4"
              />
              <path
                d="M12 16h.01"
              />
            </svg>
          </span>
          Uh-oh, something went wrong.
        </div>
        <span
          class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          data-size="sm"
          style="--text-fz: var(--mantine-font-size-sm); --text-lh: var(--mantine-line-height-sm);"
        >
          If you believe this to be a bug, please file an issue on
           
          <a
            class="mantine-focus-auto m-849cf0da m-b6d8b162 mantine-Text-root mantine-Anchor-root"
            data-underline="hover"
            href="https://github.com/jotaijs/jotai-devtools/issues"
            rel="noreferrer noopener"
            style="text-decoration: underline;"
            target="_blank"
          >
            Jotai DevTool's GitHub repo
          </a>
           
          with a minimal reproduction and the following error
        </span>
        <div
          class="m-5cb1b9c8 m-1f5e827e mantine-CodeHighlight-root"
          dir="ltr"
        >
          <button
            class="mantine-focus-auto mantine-active m-5caae85b mantine-CodeHighlight-copy m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="none"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <path
                  d="M8 8m0 2a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2z"
                />
                <path
                  d="M16 8v-2a2 2 0 0 0 -2 -2h-8a2 2 0 0 0 -2 2v8a2 2 0 0 0 2 2h2"
                />
              </svg>
            </span>
          </button>
          <div
            class="m-d57069b5 mantine-ScrollArea-root"
            dir="ltr"
            style="--sa-corner-width: 0px; --sa-corner-height: 0px;"
          >
            <div
              class="m-c0783ff9 mantine-ScrollArea-viewport"
              data-scrollbars="xy"
              style="overflow-x: scroll; overflow-y: scroll;"
            >
              <div
                style="min-width: 100%; display: table;"
              >
                <pre
                  class="m-2c47c4fd mantine-CodeHighlight-pre"
                >
                  <code
                    class="m-5caae6d3 mantine-CodeHighlight-code"
                  >
                    <span
                      class="hljs-title class_"
                    >
                      Test
                    </span>
                     
                    <span
                      class="hljs-title class_"
                    >
                      Error
                    </span>
                  </code>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button>
    trigger error
  </button>
</div>
`;

exports[`DevTools - basic Error boundary should display an error boundary with stack 1`] = `
<div>
  <style
    data-mantine-styles="true"
  >
    :root{--mantine-font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe, sans-serif;--mantine-font-family-monospace: JetBrains Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;--mantine-font-family-headings: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;--mantine-radius-default: calc(0.5rem * var(--mantine-scale));--mantine-primary-color-filled: var(--mantine-color-dark-filled);--mantine-primary-color-filled-hover: var(--mantine-color-dark-filled-hover);--mantine-primary-color-light: var(--mantine-color-dark-light);--mantine-primary-color-light-hover: var(--mantine-color-dark-light-hover);--mantine-primary-color-light-color: var(--mantine-color-dark-light-color);--mantine-primary-color-0: var(--mantine-color-dark-0);--mantine-primary-color-1: var(--mantine-color-dark-1);--mantine-primary-color-2: var(--mantine-color-dark-2);--mantine-primary-color-3: var(--mantine-color-dark-3);--mantine-primary-color-4: var(--mantine-color-dark-4);--mantine-primary-color-5: var(--mantine-color-dark-5);--mantine-primary-color-6: var(--mantine-color-dark-6);--mantine-primary-color-7: var(--mantine-color-dark-7);--mantine-primary-color-8: var(--mantine-color-dark-8);--mantine-primary-color-9: var(--mantine-color-dark-9);--mantine-color-dark-0: #C1C2C5;--mantine-color-dark-1: #A6A7AB;--mantine-color-dark-2: #909296;--mantine-color-dark-3: #5c5f66;--mantine-color-dark-4: #373A40;--mantine-color-dark-5: #2C2E33;--mantine-color-dark-6: #25262b;--mantine-color-dark-7: #1A1B1E;--mantine-color-dark-8: #141517;--mantine-color-dark-9: #101113;}:root[data-mantine-color-scheme="dark"]{--mantine-color-anchor: var(--mantine-color-dark-4);--mantine-color-dark-light: rgba(37, 38, 43, 0.15);--mantine-color-dark-light-hover: rgba(37, 38, 43, 0.2);--mantine-color-dark-outline-hover: rgba(55, 58, 64, 0.05);}:root[data-mantine-color-scheme="light"]{--mantine-color-anchor: var(--mantine-color-dark-6);--mantine-color-dark-light: rgba(37, 38, 43, 0.1);--mantine-color-dark-light-hover: rgba(37, 38, 43, 0.12);--mantine-color-dark-outline-hover: rgba(37, 38, 43, 0.05);}
  </style>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="undefined jotai-devtools-shell m-89d60db1 mantine-Tabs-root"
    data-orientation="horizontal"
    data-testid="jotai-devtools-shell"
    data-variant="default"
    id="jotai-devtools-shell"
    style="--tabs-radius: var(--mantine-radius-default); --tabs-color: var(--mantine-color-dark-filled); max-height: 90%;"
  >
    <div
      class=""
      data-testid="shell-resize-bar"
    />
    <div
      class=""
    >
      <div
        class="m-8bffd616 mantine-Flex-root __m__-r7t"
        style="align-items: center; justify-content: space-between;"
      >
        <div
          class="m-4081bf90 mantine-Group-root"
          style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
        >
          <h1
            class="m-8a5d1357 mantine-Title-root"
            data-order="1"
            data-size="h4"
            style="--title-fw: var(--mantine-h4-font-weight); --title-lh: var(--mantine-h4-line-height); --title-fz: var(--mantine-h4-font-size);"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="m-347db0ec mantine-Badge-root"
            data-size="xs"
            data-variant="light"
            style="--badge-height: var(--badge-height-xs); --badge-padding-x: var(--badge-padding-x-xs); --badge-fz: var(--badge-fz-xs); --badge-bg: var(--mantine-color-orange-light); --badge-color: var(--mantine-color-orange-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          >
            <span
              class="m-5add502a mantine-Badge-label"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="m-8bffd616 mantine-Flex-root __m__-r87"
          style="align-items: center;"
        >
          <button
            class="mantine-focus-auto mantine-active m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="filled"
            style="--ai-bg: var(--mantine-color-gray-filled); --ai-hover: var(--mantine-color-gray-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
            title="Toggle color scheme"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                class="tabler-icon tabler-icon-sun"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"
                />
                <path
                  d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"
                />
              </svg>
            </span>
          </button>
          <button
            class="mantine-focus-auto mantine-active m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="subtle"
            style="--ai-radius: var(--mantine-radius-md); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
            title="Minimize panel"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                class="tabler-icon tabler-icon-minus"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12l14 0"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="m-8bffd616 mantine-Flex-root __m__-re5"
      data-testid="jotai-devtools-error-boundary"
      role="alert"
      style="align-items: center; justify-content: center; height: 90%;"
    >
      <div
        class=""
        style="width: 100%; max-width: 80%; max-height: 80%;"
      >
        <div
          class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          data-size="md"
          style="--text-fz: var(--mantine-font-size-md); --text-lh: var(--mantine-line-height-md); font-weight: 500;"
        >
          <span
            class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          >
            <svg
              class="tabler-icon tabler-icon-alert-circle"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
              />
              <path
                d="M12 8v4"
              />
              <path
                d="M12 16h.01"
              />
            </svg>
          </span>
          Uh-oh, something went wrong.
        </div>
        <span
          class="mantine-focus-auto m-b6d8b162 mantine-Text-root"
          data-size="sm"
          style="--text-fz: var(--mantine-font-size-sm); --text-lh: var(--mantine-line-height-sm);"
        >
          If you believe this to be a bug, please file an issue on
           
          <a
            class="mantine-focus-auto m-849cf0da m-b6d8b162 mantine-Text-root mantine-Anchor-root"
            data-underline="hover"
            href="https://github.com/jotaijs/jotai-devtools/issues"
            rel="noreferrer noopener"
            style="text-decoration: underline;"
            target="_blank"
          >
            Jotai DevTool's GitHub repo
          </a>
           
          with a minimal reproduction and the following error
        </span>
        <div
          class="m-5cb1b9c8 m-1f5e827e mantine-CodeHighlight-root"
          dir="ltr"
        >
          <button
            class="mantine-focus-auto mantine-active m-5caae85b mantine-CodeHighlight-copy m-8d3f4000 mantine-ActionIcon-root m-87cf2631 mantine-UnstyledButton-root"
            data-variant="none"
            type="button"
          >
            <span
              aria-hidden="true"
              class="m-302b9fb1 mantine-ActionIcon-loader"
            >
              <span
                class="m-b34414df m-5ae2e3c mantine-Loader-root"
                style="--loader-size: calc(var(--ai-size) * 0.55); --loader-color: var(--ai-color);"
              />
            </span>
            <span
              class="m-8d3afb97 mantine-ActionIcon-icon"
            >
              <svg
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <path
                  d="M8 8m0 2a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2z"
                />
                <path
                  d="M16 8v-2a2 2 0 0 0 -2 -2h-8a2 2 0 0 0 -2 2v8a2 2 0 0 0 2 2h2"
                />
              </svg>
            </span>
          </button>
          <div
            class="m-d57069b5 mantine-ScrollArea-root"
            dir="ltr"
            style="--sa-corner-width: 0px; --sa-corner-height: 0px;"
          >
            <div
              class="m-c0783ff9 mantine-ScrollArea-viewport"
              data-scrollbars="xy"
              style="overflow-x: scroll; overflow-y: scroll;"
            >
              <div
                style="min-width: 100%; display: table;"
              >
                <pre
                  class="m-2c47c4fd mantine-CodeHighlight-pre"
                >
                  <code
                    class="m-5caae6d3 mantine-CodeHighlight-code"
                  >
                    some-stack
                  </code>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button>
    trigger error
  </button>
</div>
`;
